--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/phase2tech/urban-college-affordability#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3"
   }
 }
