--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/phase2tech/urban-college-affordability#readme",
   "devDependencies": {
+    "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
@@ -27,7 +28,18 @@
     "jshint": "^2.9.2"
   },
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-react": "^3.1.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-tools": "^0.13.3",
+    "webpack": "^1.13.0"
   }
 }
