--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.8.0",
     "gulp-babel": "^6.1.2",
     "gulp-react": "^3.1.0",
+    "node-jsx": "^0.13.3",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-tools": "^0.13.3",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "wiredep": "^4.0.0"
   }
 }
