--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
+    "glob": "^7.0.3",
     "gulp-babel": "^6.1.2",
     "gulp-react": "^3.1.0",
     "node-jsx": "^0.13.3",
