--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^15.0.2",
     "react-tools": "^0.13.3",
     "webpack": "^1.13.0",
-    "wiredep": "^4.0.0"
+    "wiredep": "^4.0.0",
+    "gulp-git": "^1.7.1"
   }
 }
