--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "glob": "^7.0.3",
     "gulp-babel": "^6.1.2",
     "gulp-react": "^3.1.0",
+    "marked": "^0.3.5",
     "node-jsx": "^0.13.3",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-router": "^2.4.0",
     "react-tools": "^0.13.3",
     "webpack": "^1.13.0",
     "wiredep": "^4.0.0"
