--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "webpack": "^1.13.0",
     "wiredep": "^4.0.0",
     "gulp-git": "^1.7.1",
-    "del": "^2.2.0"
+    "del": "^2.2.0",
+    "winston": "^2.1.1"
   }
 }
