--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-dest": "^0.2.3",
     "gulp-react": "^3.1.0",
+    "gulp-webpack": "^1.5.0",
     "map-stream": "0.0.6",
     "marked": "^0.3.5",
     "node-jsx": "^0.13.3",
