--- a/package.json
+++ b/package.json
@@ -40,17 +40,20 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
+    "concurrent-transform": "^1.0.0",
     "d3": "^3.5.17",
     "del": "^2.2.0",
     "eslint": "^2.10.2",
     "eslint-plugin-react": "^5.1.1",
     "exenv": "^1.2.1",
     "fs-extra": "^0.30.0",
+    "git": "^0.1.5",
     "glob": "^7.0.3",
     "gulp-babel": "^6.1.2",
     "gulp-dest": "^0.2.3",
     "gulp-eslint": "^2.0.0",
     "gulp-git": "^1.7.1",
+    "gulp-image-resize": "^0.8.0",
     "gulp-react": "^3.1.0",
     "gulp-webpack": "^1.5.0",
     "map-stream": "0.0.6",
@@ -64,8 +67,6 @@
     "standard": "^7.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
-    "wiredep": "^4.0.0",
-    "gulp-image-resize": "^0.8.0",
-    "concurrent-transform": "^1.0.0"
+    "wiredep": "^4.0.0"
   }
 }
