Instantiated webpack, added rules in react

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,6 +12,8 @@ rules:
     - always
   no-unused-vars:
     - 1
+  react/jsx-uses-vars: 1
+  react/react-in-jsx-scope: 1
 env:
   es6: true
   browser: true
