--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "style-loader": "^0.13.1",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.0",
+    "winston": "^2.2.0",
     "wiredep": "^4.0.0"
   }
 }
