adding breakpoint module

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
+    "breakpoint": "^0.1.6",
+    "classnames": "^2.2.5",
     "concurrent-transform": "^1.0.0",
     "d3": "^3.5.17",
     "del": "^2.2.0",
@@ -61,6 +63,7 @@
     "node-jsx": "^0.13.3",
     "node-reset-scss": "^1.0.1",
     "react": "^15.0.2",
+    "react-container-query": "^0.4.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
     "react-tools": "^0.13.3",
@@ -68,15 +71,7 @@
     "style-loader": "^0.13.1",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.0",
-    "gulp-image-resize": "^0.8.0",
-    "concurrent-transform": "^1.0.0",
-    "wiredep": "^4.0.0",
-    "gulp-git": "^1.7.1",
-    "del": "^2.2.0",
     "webpack-stream": "^3.2.0",
-    "react-container-query": "^0.4.2",
-    "classnames": "^2.2.5",
-    "vinyl-named": "^1.1.0",
     "winston": "^2.2.0",
     "wiredep": "^4.0.0"
   }
