--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^2.10.2",
     "eslint-plugin-react": "^5.1.1",
     "exenv": "^1.2.1",
+    "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
     "git": "^0.1.5",
     "glob": "^7.0.3",
@@ -69,6 +70,7 @@
     "react-tools": "^0.13.3",
     "standard": "^7.1.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.0",
     "webpack-stream": "^3.2.0",
