starting responsive work for header

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
-    "breakpoint": "^0.1.6",
+    "breakpoint-sass": "^2.7.0",
     "classnames": "^2.2.5",
     "concurrent-transform": "^1.0.0",
     "d3": "^3.5.17",
@@ -50,6 +50,7 @@
     "exenv": "^1.2.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
     "fs-extra": "^0.30.0",
     "git": "^0.1.5",
     "glob": "^7.0.3",
