--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "marked": "^0.3.5",
     "node-jsx": "^0.13.3",
     "node-reset-scss": "^1.0.1",
+    "postcss-loader": "^0.9.1",
     "react": "^15.0.2",
     "react-container-query": "^0.4.2",
     "react-dom": "^15.0.2",
