--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-container-query": "^0.4.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
+    "react-tabbordion": "^0.4.1",
     "react-tools": "^0.13.3",
     "standard": "^7.1.0",
     "style-loader": "^0.13.1",
