Added new gulp job, code cleanup, retrofitted image generation task to fit current needs

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-git": "^1.7.1",
     "gulp-image-resize": "^0.8.0",
     "gulp-react": "^3.1.0",
+    "img-loader": "^1.2.2",
     "map-stream": "0.0.6",
     "marked": "^0.3.5",
     "node-jsx": "^0.13.3",
