Update to README, scaffolded more modular graph component

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.6.3",
+    "fs": "0.0.2",
     "fs-extra": "^0.30.0",
     "git": "^0.1.5",
     "glob": "^7.0.3",
@@ -63,6 +64,8 @@
     "gulp-image-resize": "^0.8.0",
     "gulp-react": "^3.1.0",
     "img-loader": "^1.2.2",
+    "json-loader": "^0.5.4",
+    "jsonfile": "^2.3.1",
     "map-stream": "0.0.6",
     "marked": "^0.3.5",
     "node-jsx": "^0.13.3",
