--- a/package.json
+++ b/package.json
@@ -67,8 +67,10 @@
     "node-reset-scss": "^1.0.1",
     "postcss-loader": "^0.9.1",
     "react": "^15.0.2",
+    "react-addons-css-transition-group": "^15.0.2",
     "react-container-query": "^0.4.2",
     "react-dom": "^15.0.2",
+    "react-lazyload" : "^2.1.2",
     "react-router": "^2.4.0",
     "react-tabbordion": "^0.4.1",
     "react-tools": "^0.13.3",
