--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-git": "^1.7.1",
     "gulp-image-resize": "^0.8.0",
     "gulp-react": "^3.1.0",
+    "history": "^3.0.0",
     "img-loader": "^1.2.2",
     "json-loader": "^0.5.4",
     "jsonfile": "^2.3.1",
