--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-container-query": "^0.4.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
+    "react-sticky": "^5.0.3",
     "react-tabbordion": "^0.4.1",
     "react-tools": "^0.13.3",
     "standard": "^7.1.0",
