--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,8 +10,7 @@ rules:
   semi:
     - 2
     - always
-  no-unused-vars:
-    - 1
+  no-unused-vars: ["error", { "varsIgnorePattern": "React" }]
   react/jsx-uses-vars: 1
   react/react-in-jsx-scope: 1
 env:
