[UICA-70] - Fixed the section name overlap into the toggle arrow

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
+    "babel-runtime": "^6.9.1",
     "breakpoint-sass": "^2.7.0",
     "c3": "^0.4.11",
     "classnames": "^2.2.5",
@@ -75,6 +76,7 @@
     "marked": "^0.3.5",
     "node-jsx": "^0.13.3",
     "node-reset-scss": "^1.0.1",
+    "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
