--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "Peter Cho",
   "license": "ISC",
   "homepage": "https://bitbucket.org/phase2tech/urban-college-affordability#readme",
+  "engines": {
+    "node": "4.0.0"
+  },
   "devDependencies": {
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
