--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "vinyl-named": "^1.1.0",
     "webpack": "^1.13.0",
     "webpack-stream": "^3.2.0",
+    "window-or-global": "^1.0.1",
     "winston": "^2.2.0",
     "wiredep": "^4.0.0"
   }
