adding google tag manager

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-container-query": "^0.4.2",
     "react-dom": "^15.0.2",
     "react-ga": "^2.1.2",
+    "react-google-tag-manager": "^2.1.0",
     "react-lazyload": "git+ssh://git@github.com/rsmylski/react-lazyload.git",
     "react-router": "^2.4.1",
     "react-sticky": "^5.0.4",
