--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-gm": "0.0.8",
     "gulp-jshint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.2",
-    "sass-loader": "^3.2.3"
+    "sass-loader": "^3.2.3",
+    "webpack": "^1.15.0"
   },
   "dependencies": {
     "app-module-path": "^1.1.0",
@@ -97,7 +99,6 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
-    "webpack": "^1.13.0",
     "webpack-stream": "^3.2.0",
     "window-or-global": "^1.0.1",
     "winston": "^2.2.0",
