--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node": "4.0.0"
   },
   "devDependencies": {
-    "babel-preset-react": "^6.5.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
@@ -41,14 +42,13 @@
     "babel": "^6.5.2",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
     "babel-runtime": "^6.9.1",
+    "babylonjs": "^3.2.0-alpha0",
     "breakpoint-sass": "^2.7.0",
     "c3": "^0.4.11",
     "classnames": "^2.2.5",
