--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-loader": "^6.4.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-gm": "0.0.8",
@@ -33,8 +32,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.2",
-    "sass-loader": "^3.2.3",
-    "webpack": "^1.15.0"
+    "sass-loader": "^3.2.3"
   },
   "dependencies": {
     "app-module-path": "^1.1.0",
@@ -99,6 +97,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
+    "webpack": "^1.15.0",
     "webpack-stream": "^3.2.0",
     "window-or-global": "^1.0.1",
     "winston": "^2.2.0",
